--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
-<!DOCTYPE html><html><head><link rel="shortcut icon" href=/crNursing/resource/logo/logo.ico type=image/x-icon><meta http-equiv=Content-Type content="text/html; charset=UTF-8"><meta http-equiv=X-UA-Compatible content="IE=8"><meta http-equiv=Expires content=0><meta http-equiv=Pragma content=no-cache><meta http-equiv=Cache-control content=no-cache><meta http-equiv=Cache content=no-cache><title>宸瑞智慧护理信息系统</title><style>@-webkit-keyframes spin {
+<!DOCTYPE html>
+<html>
+  <head>
+    <link
+      rel="shortcut icon"
+      href="/crNursing/resource/logo/logo.ico"
+      type="image/x-icon"
+    />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=8" />
+    <meta http-equiv="Expires" content="0" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Cache-control" content="no-cache" />
+    <meta http-equiv="Cache" content="no-cache" />
+    <title>宸瑞智慧护理信息系统</title>
+    <style>
+      @-webkit-keyframes spin {
         0% {
           transform: rotate(0);
         }
@@ -74,4 +90,20 @@
         bottom: 15px;
         box-shadow: 3px 0px rgb(255, 100, 123);
         animation: spin 1.5s linear infinite;
-      }</style><link href=/crNursing/webpage/dist/static/css/index.d9fbea4f82e10bbd9cd3564d87f9c841.css rel=stylesheet></head><body><div id=nb-global-spinner class=spinner><div class="blob blob-0"></div><div class="blob blob-1"></div><div class="blob blob-2"></div><div class="blob blob-3"></div><div class="blob blob-4"></div><div class="blob blob-5"></div></div><div id=app></div><script type=text/javascript src=/crNursing/webpage/dist/static/js/manifest.ca7c50e7f584ee1e6b32.js></script><script type=text/javascript src=/crNursing/webpage/dist/static/js/vendor.149ce72315fdf2d7c43f.js></script><script type=text/javascript src=/crNursing/webpage/dist/static/js/index.b163efbbcfb40478dcb5.js></script></body></html>
+      }
+    </style>
+  </head>
+
+  <body>
+    <div id="nb-global-spinner" class="spinner">
+      <div class="blob blob-0"></div>
+      <div class="blob blob-1"></div>
+      <div class="blob blob-2"></div>
+      <div class="blob blob-3"></div>
+      <div class="blob blob-4"></div>
+      <div class="blob blob-5"></div>
+    </div>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
