--- a/preview-eval/preview-sheet.html
+++ b/preview-eval/preview-sheet.html
@@ -1014,8 +1014,8 @@
       }
       function load(e) {
         let wid = e.contentWindow;
-        wid.body.style.background = "#dfdfdf";
-        wid.body.style.margin = "10px";
+        wid.document.body.style.background = "#dfdfdf";
+        wid.document.body.style.margin = "10px";
       }
     </script>
   </body>
