优化护记打印

--- a/src/pages/sheet-print/sheet-print.html
+++ b/src/pages/sheet-print/sheet-print.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>护理评估单打印</title>
+    <script>
+      /** 防止触发蓝牙接口 */
+      window.ENABLE_BLUETOOTH_SIGN = false;
+    </script>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>护理评估单打印</title>
-</head>
-
-<body>
-  <div id="app"></div>
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
