病人信息检查修改&医生查看信息页面bug

--- a/preview-eval/preview-eval.html
+++ b/preview-eval/preview-eval.html
@@ -941,10 +941,7 @@
         .then(res => {
           authToken = res.data.data.authToken;
           userInfo = res.data.data.user;
-          let obj = {
-            ...userInfo,
-            token: authToken
-          };
+          let obj = Object.assign({}, userInfo, { token: authToken });
           localStorage.user = JSON.stringify(obj);
         })
         .then(res => {
