--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <meta http-equiv="Cache" content="no-cache" />
-    <title>宸瑞智慧护理信息系统</title>
+    <title>百辰源智慧护理信息系统</title>
     <style>
       @-webkit-keyframes spin {
         0% {
